# boulder_examples

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/combustor/: devcontainer.json
.devcontainer/continuous_reactor/: devcontainer.json
.devcontainer/fuel_injection/: devcontainer.json
.devcontainer/mix1/: devcontainer.json
.devcontainer/nanosecond_pulse_discharge/: devcontainer.json
.devcontainer/periodic_cstr/: devcontainer.json
.devcontainer/reactor1/: devcontainer.json
.devcontainer/reactor2/: devcontainer.json
.github/: dependabot.yml
LICENSES/: Cantera.txt
adapters/: combustor.py  continuous_reactor.py  fuel_injection.py  mix1.py  nanosecond_pulse_discharge.py  periodic_cstr.py  piston.py  reactor1.py  reactor2.py  surf_pfr.py
boulder_examples/: __init__.py  catalog.py
docs/: Makefile  catalog.rst  conf.py  contributing.rst  index.rst
examples/: combustor.yaml  continuous_reactor.yaml  fuel_injection.yaml  manifest.yaml  mix1.yaml  nanosecond_pulse_discharge.yaml  periodic_cstr.yaml  piston.yaml  reactor1.yaml  reactor2.yaml  run_sweep.py  surf_pfr.yaml
scripts/: build_catalog_rst.py  build_devcontainers.py  capture_all_screenshots.sh  capture_screenshot.py  capture_screenshots.py  download_upstream.py  generate_examples.py  verify_examples_api.py  verify_examples_solve.py
tests/: conftest.py  test_catalog.py  test_downloaded_scripts.py  test_stone_examples.py
(+9 files in other folders)
